Preparando o pprojeto para implantação no cliente